@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0100
+// generated by Fast Light User Interface Designer (fluid) version 1.0102
 
 #include "../FL/Fl_File_Chooser.H"
 
@@ -79,7 +79,7 @@ void Fl_File_Chooser::cb_okButton(Fl_Return_Button* o, void* v) {
 }
 
 inline void Fl_File_Chooser::cb_Cancel_i(Fl_Button*, void*) {
-  fileName->value(directory_);
+  fileName->value("");
 fileList->deselect();
 Fl::remove_timeout((Fl_Timeout_Handler)previewCB, this);
 window->hide();
