@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.2
 
+	- Fl_File_Chooser::value() didn't return NULL when the
+	  user clicked Cancel while selecting a directory.  This
+	  bug also affected fl_dir_chooser().
 	- Fl_Menu_::add(const char *) used too small a menu item
 	  label buffer and didn't do bounds checking.
 	- Eliminate some compiler warnings with CodeWarrier
